correct he image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Home Section -->
   <!-- Home Section -->
 <section id="home">
-    <img src="/assets/DSC00735.jpg" alt="Dhanushkumar" class="profile-image">
+    <img src="./assets/DSC00735.jpg" alt="Dhanushkumar" class="profile-image">
     <h1>Hi, I'm Dhanushkumar</h1>
     <p class="intro">
         I am a beginner full-stack developer passionate about building web applications 
