--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <p class="project-tech">Technologies: HTML, CSS, JavaScript</p>
         </a>
 
-        <a href="https://your-ecommerce-link.com" class="project" target="_blank">
+        <a href="https://dhanushmadan404-create.github.io/static-website/" class="project" target="_blank">
             <h3>Static E-commerce Website</h3>
             <p>A fully static e-commerce website showcasing products with a clean and simple design.</p>
             <p class="project-tech">Technologies: HTML, CSS</p>
