--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p class="project-tech">Technologies: HTML, CSS</p>
         </a>
 
-        <a href="https://your-game-link.com" class="project" target="_blank">
+        <a href="https://dhanushmadan404-create.github.io/connect_with_computer/" class="project" target="_blank">
             <h3>Number Matching Game</h3>
             <p>A simple interactive game where the user guesses a number and compares it with a computer-generated number.</p>
             <p class="project-tech">Technologies: JavaScript</p>
