--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h2>Contact</h2>
         <div class="contact-info">
             <p>Feel free to reach out to me!</p>
-            <p><strong>Email:</strong> <a href="mailto:dhanushkumar@example.com"></a></p>
+            <p><strong>Email:dhanushmadan404@gmail.com</strong> <a href=""></a></p>
             <p><strong>Location:</strong> Vallalar Street,Tamil Nadu, India</p>
         </div>
     </section>
