fix: update project links and enhance contact section details

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <section id="home">
     <img src="./assets/DSC00735.jpg" alt="Dhanushkumar" class="profile-image">
     <h1>Hi, I'm Dhanushkumar</h1>
-    
+</section> 
 </section>
     <!-- Skills Section -->
     <section id="skills">
@@ -47,10 +47,11 @@
     <section id="projects">
         <h2>Projects</h2>
         
-        <a href="https://your-annesana-link.com" class="project" target="_blank">
+        <a href="annesana-1-dnv8.vercel.app" class="project" target="_blank">
             <h3>Annesana</h3>
             <p>A push cart shop locator website that helps users find nearby push cart shops in their area.</p>
-            <p class="project-tech">Technologies: HTML, CSS, JavaScript</p>
+            <p class="project-tech">Technologies: HTML,  CSS,  JavaScript,  python,  postgresql,  Fastapi 
+            </p>
         </a>
 
         <a href="https://dhanushmadan404-create.github.io/static-website/" class="project" target="_blank">
@@ -65,7 +66,7 @@
             <p class="project-tech">Technologies: JavaScript</p>
         </a>
 
-        <a href="https://your-todo-link.com" class="project" target="_blank">
+        <a href="" class="project" target="_blank">
             <h3>To-Do List Application</h3>
             <p>A basic to-do list app that allows users to add, remove, and manage their daily tasks.</p>
             <p class="project-tech">Technologies: HTML, CSS, JavaScript</p>
@@ -77,7 +78,9 @@
         <h2>Contact</h2>
         <div class="contact-info">
             <p>Feel free to reach out to me!</p>
-            <p><strong>Email:dhanushmadan404@gmail.com</strong> <a href=""></a></p>
+            <p><strong>Email:  dhanushmadan404@gmail.com</strong></p>
+            <p><strong>Number:  9080915996</strong> </p>
+              <p><strong>Linkdin:<a href=""></a></strong> </p>
             <p><strong>Location:</strong> Vallalar Street,Tamil Nadu, India</p>
         </div>
     </section>
