--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- intro -->
         <div id="intro">
             <div class="content">
-                <h1>Hi! Welcome to MySelf</h1>
+                <h1>Hi! I'm a Web Development Student</h1>
                 <b></b>
             </div>
             <div class="img-container">
@@ -34,7 +34,7 @@
          <div id="introduction">
             <h1 class="title">Introduction</h1>
             <div class="topself">
-            <div class="selfBox side"><h1>My score</h1>
+            <div class="selfBox side"><h1>My 12th score</h1>
             <h2>526/600</h2></div>
             <div class="selfBox mySelf">My name is Dhanush Kumar, and I am from Pallikaranai, Chennai. I completed my 12th standard at MMDA Government Higher Secondary School</div>
             <div class="selfBox side game"><h1>My Passion</h1>
@@ -52,16 +52,18 @@
              <div class="frontend knowbox">
                 <div class="knowbox front" >
                     <h1>HTML</h1>
-                    <!-- <aside>80%</aside> -->
-                    <img src="assets/html1.png" alt="html" >
+                    <div class="star-rating" data-rating=" 3.85"></div>
+                    <img src="./assets//html copy.png" alt="html" >
                 </div>
                 <div class="knowbox front">
                      <h1>CSS</h1>
-                    <img src="assets/css.png" alt="CSS" >
+                     <div class="star-rating" data-rating="3.5"></div>
+                    <img src="./assets/css copy.png" alt="CSS" >
                 </div>
                 <div class="knowbox front">
                       <h1>JavaScript</h1>
-                    <img src="assets/js.png" alt="JavaScript" >
+                      <div class="star-rating" data-rating="2.5"></div>
+                    <img src="./assets/js copy.png" alt="JavaScript" >
                 </div>
              </div>
             
@@ -69,14 +71,17 @@
              <div class="backend knowbox">
                 <div class="knowbox back">
                      <h1>PYTHON</h1>
+                     <div class="star-rating" data-rating="4.0"></div>
                     <img src="assets/python.png" alt="PYTHON" >
                 </div>
                 <div class="knowbox back">
                      <h1>FastAPI</h1>
+                     <div class="star-rating" data-rating="3.25"></div>
                     <img src="assets/fastapi.png" alt="FastAPI" >
                 </div>
                 <div class="knowbox back">
                      <h1>POSTGRESSQL</h1>
+                     <div class="star-rating" data-rating="3.50"></div>
                     <img src="assets/sql.png" alt="POSTGRESSQL" >
                 </div>
                 
