--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
             <div class="lifeskill">
                 <div id="head" ><h1>Life Skill</h1></div>
 
-                <div class="pro skill"><img src="./assets/productbuild.jpeg" alt="completed" loading="lazy" srcset="./assets/productbuild.jpeg 480w, ./assets/productbuild.jpeg 768w, ./assets/productbuild.jpeg 1200w"  sizes="(max-width: 600px) 90vw, 50vw" width="500px"><h2>Product Building Challenge</h2></div>
-                <div class="pro skill"><img src="./assets/workplacestudy.jpeg" alt="completed" loading="lazy" srcset="./assets/workplacestudy.jpeg 480w,./assets/workplacestudy.jpeg 768w,./assets/workplacestudy.jpeg 1200w"  sizes="(max-width: 600px) 90vw, 50vw"><h2>Work Place Study</h2></div>
+                <div class="pro skill"><p>In the Product Building Challenge, we created a massage belt. Through this experience, I learnt how to sell a product and what key points should be included when presenting a product to customers.</p><h2>Product Building Challenge</h2></div>
+                <div class="pro skill"><p>In the workflow study, we created a drama to explain each role. Through this experience, I learned how each role functions, how team members communicate, and how roles are organized in a hierarchy.</p><h2>Work Place Study</h2></div>
                 <div class="pro skill"><img src="./assets/story.png" alt="completed" loading="lazy" srcset="./assets/story.png 480w, ./assets/story.png 768w, ./assets/story.png 1200w"  sizes="(max-width: 600px) 90vw, 50vw" ><h2>Story Telling</h2></div>
                 <div class="pro skill"><b><a href="https://prezi.com/view/wxVApg97zN0TNMF35wlp/?referral_token=LcsPTolnB3FN">My Slide</a></b><img src="./assets/bingo.png" alt="completed" loading="lazy" srcset="./assets/bingo.png 480w, ./assets/bingo.png 768w, ./assets/bingo.png 1200w"  sizes="(max-width: 600px) 90vw, 50vw"><h2>Brand Analysis</h2></div>
             </div>
