--- a/index.html
+++ b/index.html
@@ -185,15 +185,33 @@
 
 
   <!-- Contact -->
-  <section id="contact" class="section">
-    <h2 class="section-title">Contact</h2>
+  <section id="contact" class="sectionEnd">
+    <div>
 
-    <div class="contact-box">
-      <p><strong>Email:</strong> dhanushmadan404@gmail.com</p>
-      <p><strong>Phone:</strong> 9080915996</p>
-      <p><strong>Location:</strong> Tamil Nadu, India</p>
+      <h2 class="section-title">Contact</h2>
+      
+      <div class="contact-box">
+        <p><strong>Email:</strong> dhanushmadan404@gmail.com</p>
+        <p><strong>Phone:</strong> 9080915996</p>
+        <p><strong>Location:</strong> Tamil Nadu, India</p>
+      </div>
     </div>
-  </section>
+    <div>
+      <h2 class="section-title">Feed Back</h2>
+        
+      <div class="contact-box">
+        <form >
+          <label for="name">Name</label><br/>
+          <input type="text" name="Name" id="name" placeholder="Enter Your Name"/><br/>
+          <label for="email">Email</label><br/>
+          <input type="text" name="email" id="email" value="@gmail.com"/><br/>
+          <label for="content">Let me know</label><br/>
+          <textarea name="info" id="content"></textarea><br/>
+<button type="submit">Submit</button>
+        </form>
+      </div>
+    </div>
+    </section>
 
   <footer>
     © 2026 Dhanush Kumar
