--- a/index.html
+++ b/index.html
@@ -200,12 +200,13 @@
       <h2 class="section-title">Feed Back</h2>
         
       <div class="contact-box">
-        <form >
-          <label for="name">Name</label><br/>
+        <form action="https://formspree.io/f/mykkldoz"
+  method="POST">
+          <label for="name">Name</label>
           <input type="text" name="Name" id="name" placeholder="Enter Your Name"/><br/>
-          <label for="email">Email</label><br/>
+          <label for="email">Email</label>
           <input type="text" name="email" id="email" value="@gmail.com"/><br/>
-          <label for="content">Let me know</label><br/>
+          <label for="content">Let me know</label>
           <textarea name="info" id="content"></textarea><br/>
 <button type="submit">Submit</button>
         </form>
