--- a/index.html
+++ b/index.html
@@ -34,7 +34,75 @@
       <img src="assets/dhanush.png" alt="Dhanush Kumar">
     </div>
   </section>
+<!-- About Me -->
+ <section id="About" class="section">
+  <h2 class="section-title">Summary</h2>
 
+  <div class="about-container">
+
+    <!-- LEFT SIDE IMAGES -->
+    <div class="about-images">
+
+      <div class="image-box">
+        <img src="./assets/WhatsApp Image 2026-01-10 at 6.25.24 PM (1).jpeg" alt="Dhanush Kumar">
+        <p class="caption">Dhanush Kumar</p>
+      </div>
+
+      <div class="image-box">
+        <img src="./assets/logo copy 2.png" alt="Project Screenshot">
+        <p class="caption">Street Food Full Stack Project</p>
+      </div>
+
+    </div>
+
+    <!-- RIGHT SIDE CONTENT -->
+    <div class="about-content">
+
+      <p>
+        Hi! I'm Dhanush Kumar from Pallikaranai, Chennai. I have completed my 12th standard. 
+        My goal is to become a game developer. I didn’t know how it works, but I had a small 
+        interest in programming languages. Due to some family financial issues, I didn’t go 
+        to college and directly joined Freshworks STS Software Academy.
+      </p>
+
+      <p>
+        At this academy, I am continuously improving my English communication skills by 
+        speaking with others and doing English-speaking tasks like movie reviews and 
+        analyzing AI tools, which helped me participate in storytelling and win 2nd prize. 
+        It also helped me in squad tasks. At the starting point of this academy, the coaches 
+        formed 15 squads. My squad name is Iconic 5.
+      </p>
+
+      <p>
+        We completed three squad projects such as Team Introduction, Product Building 
+        Challenge, and Workplace Studies. Through these projects, we got 2nd prize in 
+        Workplace Studies. During this squad journey, I gained team collaboration and 
+        organizational skills. These organizational skills helped me in brand analysis. 
+        I correctly navigated my brand analysis, so the coaches appreciated me.
+      </p>
+
+      <p>
+        In the problem-solving class, I reached Level 5 based on the coaches’ plan. 
+        I didn’t expect to develop this interest in problem solving.
+      </p>
+
+      <p>
+        I have learned some programming languages such as HTML, CSS, JavaScript, Python, 
+        FastAPI, and PostgreSQL. Based on this, I built one static e-commerce project and 
+        one full-stack project. These projects display the exact location of pushcart shops, 
+        so users don’t waste their time finding their favorite street food. My website easily 
+        navigates users to their favorite street food locations.
+      </p>
+
+      <p>
+        Now, I am currently learning React.js. Based on this, I am building a YouTube project. 
+        My short-term goal is to become a frontend developer.
+      </p>
+
+    </div>
+
+  </div>
+</section>
   <!-- Skills -->
  <!-- Skills Section -->
 <section id="skills" class="section">
@@ -111,7 +179,7 @@
           <h3>Reading</h3>
         </div>
         <div class="pro-type">
-         <div class="star-rating" data-rating="2.3"></div> <a href="./assets/EF SET Certificate (1).pdf">Proof</a>
+         <div cl ass="star-rating" data-rating="2.3"></div> <a href="./assets/EF SET Certificate (1).pdf">Proof</a>
           <h3>Listening</h3>
         </div>
         <div class="pro-type">
